// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`fileInputField > should render correctly 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        class="uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u7 uv_toi52u5d"
      >
        <div
          class="uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u1v uv_toi52u5d"
        >
          <label
            class="uv_17td3g92 uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owi uv_m4c9owo uv_m4c9ow1b uv_m4c9ow20 uv_m4c9ow3c"
          >
            Test
          </label>
          <div
            class="uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owi uv_m4c9owm uv_m4c9ow1b uv_m4c9ow20 uv_m4c9ow3c"
          >
            <div
              class="uv_12cubgs0 uv_12cubgs2 uv_12cubgs5 uv_toi52u0 uv_toi52u3d uv_toi52u2d uv_toi52u7d uv_toi52ud uv_toi52u5j"
              data-testid="drag-container"
            >
              <input
                class="uv_12cubgs8"
                id="_r_0_"
                name="Test"
                type="file"
              />
              <svg
                class="styles__1sbwqkz0 styles_prominence_default__1sbwqkzg styles_disabled_false__1sbwqkzf styles_sentiment_primary__1sbwqkz1 styles_size_xlarge__1sbwqkzb styles_undefined_compound_32__1sbwqkz1g"
                viewBox="0 0 20 20"
              >
                <path
                  d="M9.25 13.25a.75.75 0 0 0 1.5 0V4.636l2.955 3.129a.75.75 0 0 0 1.09-1.03l-4.25-4.5a.75.75 0 0 0-1.09 0l-4.25 4.5a.75.75 0 1 0 1.09 1.03L9.25 4.636z"
                />
                <path
                  d="M3.5 12.75a.75.75 0 0 0-1.5 0v2.5A2.75 2.75 0 0 0 4.75 18h10.5A2.75 2.75 0 0 0 18 15.25v-2.5a.75.75 0 0 0-1.5 0v2.5c0 .69-.56 1.25-1.25 1.25H4.75c-.69 0-1.25-.56-1.25-1.25z"
                />
              </svg>
              <p
                class="uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owi uv_m4c9ow16 uv_m4c9ow1b uv_m4c9ow20 uv_m4c9ow3c"
                for="_r_0_"
                style="--uv_qabug40: left;"
              />
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`fileInputField > should render correctly as an overlay 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        class="uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u7 uv_toi52u5d"
      >
        <div
          data-testid="drag-container"
        >
          <input
            class="uv_12cubgs8"
            id="_r_8_"
            name="Test"
            type="file"
          />
          <div
            class="uv_12cubgsb"
          >
            overlay
            <div
              class="uv_12cubgse uv_12cubgsc"
            />
          </div>
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`fileInputField > should render correctly disabled 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        class="uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u7 uv_toi52u5d"
      >
        <div
          class="uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u1v uv_toi52u5d"
        >
          <label
            class="uv_17td3g92 uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owi uv_m4c9owo uv_m4c9ow1b uv_m4c9ow20 uv_m4c9ow3c"
          >
            Test
          </label>
          <div
            class="uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owi uv_m4c9owm uv_m4c9ow1a uv_m4c9ow30"
          >
            <div
              class="uv_12cubgs0 uv_12cubgs2 uv_12cubgs5 uv_12cubgs6 uv_toi52u0 uv_toi52u3d uv_toi52u2d uv_toi52u7d uv_toi52ud uv_toi52u5j"
              data-testid="drag-container"
            >
              <svg
                class="styles__1sbwqkz0 styles_prominence_default__1sbwqkzg styles_disabled_true__1sbwqkze styles_sentiment_primary__1sbwqkz1 styles_size_xlarge__1sbwqkzb styles_undefined_compound_0__1sbwqkzk"
                viewBox="0 0 20 20"
              >
                <path
                  d="M9.25 13.25a.75.75 0 0 0 1.5 0V4.636l2.955 3.129a.75.75 0 0 0 1.09-1.03l-4.25-4.5a.75.75 0 0 0-1.09 0l-4.25 4.5a.75.75 0 1 0 1.09 1.03L9.25 4.636z"
                />
                <path
                  d="M3.5 12.75a.75.75 0 0 0-1.5 0v2.5A2.75 2.75 0 0 0 4.75 18h10.5A2.75 2.75 0 0 0 18 15.25v-2.5a.75.75 0 0 0-1.5 0v2.5c0 .69-.56 1.25-1.25 1.25H4.75c-.69 0-1.25-.56-1.25-1.25z"
                />
              </svg>
              <p
                class="uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owi uv_m4c9ow16 uv_m4c9ow1a uv_m4c9ow30"
                for="_r_4_"
                style="--uv_qabug40: left;"
              />
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;
